# Elector-Contest-Solar-Sensor

./: .gitignore  LICENSE
10_sensor_kicad/: SolarTemperatureSensor.kicad_pcb  SolarTemperatureSensor.kicad_prl  SolarTemperatureSensor.kicad_pro  SolarTemperatureSensor.kicad_sch  fp-lib-table  hrvst_adp5091.kicad_sch  mcu_stm32l0.kicad_sch  radio_max41460.kicad_sch  sym-lib-table  temp_max31889.kicad_sch
10_sensor_kicad/Lib/7488910092.pretty/: 7488910092.kicad_mod
10_sensor_kicad/Lib/ADP5091/: ADP5091.kicad_sym
10_sensor_kicad/Lib/MAX31889/: MAX31889.kicad_sym
10_sensor_kicad/Lib/MAX41460/: MAX41460.kicad_sym
10_sensor_kicad/Lib/SCMR18C105PRBA0.pretty/: SCMR18C105PRBA0.kicad_mod
20_sensor_stm32l053_fw/SolarTemperatureSensor_V2/: .cproject  .gitignore  .mxproject  .project  STM32L053C8TX_FLASH.ld  SolarTemperatureSensor_V2 Debug.launch  SolarTemperatureSensor_V2 Release.launch  SolarTemperatureSensor_V2.ioc
20_sensor_stm32l053_fw/SolarTemperatureSensor_V2/Core/Inc/: main.h  stm32l0xx_hal_conf.h  (+1 more)
21_sensor_stm32l053_fw_build/: SolarTemperatureSensor_V2.elf  SolarTemperatureSensor_V2.hex
30_gateway_stm32wl55_fw/SolarSensorGatewayNucleo/: .cproject  .mxproject  .project  SolarSensorGatewayNucleo Debug.launch  SolarSensorGatewayNucleo.ioc
31_gateway_stm32wl55_fw_build/: SolarSensorGatewayNucleo.elf  SolarSensorGatewayNucleo.hex
40_gateway_gui/: Cargo.toml  gui-style-internal.css  sensors.txt  stm32mp_build.sh  stm32mp_run.sh  stm32mp_upload.sh  wrapper.sh
40_gateway_gui/.cargo/: config
40_gateway_gui/src/: com.rs  gui.rs  main.rs  packet.rs  sensor.rs
(+25 files in other folders)
