[package]
name = "solar_sensor_gateway_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18"
serialport = "4.3"
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"
aes = "0.8"
byteorder = "1.5"
crc = "3.0"
